# OpenGLReference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
res/fonts/: lato-source.txt
res/shader/: clipped-text-fragment.glsl  clipped-text-vertex.glsl  container-fragment.glsl  fragment.glsl  text-fragment.glsl  text-vertex.glsl  vertex.glsl
source/: containers.h  main.cpp
source/graphics/gl/: camera.h  program.h  shader.h  texture.h
src/: containers.h  main.cpp
src/graphics/gl/: base.h  font.h  program.h  shader.h  texture.h  uniform.h  vertices.h
tools/: Dockerfile
